--- a/deployments/prod/ink.yaml
+++ b/deployments/prod/ink.yaml
@@ -3,10 +3,10 @@ config:
   dao:
     crv: '0xAC73671a1762FE835208Fb93b7aE7490d1c2cCb3'
     crvusd: '0x39fec550CC6DDCEd810eCCfA9B2931b4B5f2344D'
-    emergency_admin: null
-    ownership_admin: null
-    parameter_admin: null
-    vault: null
+    emergency_admin: '0xcAEF324bea3Ff5c7a08710081294F3344fFAdC54'
+    ownership_admin: '0x63Eb7846642630456707C3efBb50A03c79B89D81'
+    parameter_admin: '0xa8eB7B41fe8dF7Ea3de982397AD183721784D987'
+    vault: '0x686bdb3D24Bc6F3ED89ed3d3B659765c54aC78B4'
   explorer_base_url: https://explorer.inkonchain.com/
   file_name: ink
   file_path: prod/ink.yaml
@@ -25,6 +25,341 @@ config:
     weth: '0x4200000000000000000000000000000000000006'
   rollup_type: op_stack
   wrapped_native_token: '0x4200000000000000000000000000000000000006'
-contracts: null
+contracts:
+  amm:
+    stableswap:
+      factory:
+        address: '0x046207cB759F527b6c10C2D61DBaca45513685CC'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000686bdb3d24bc6f3ed89ed3d3b659765c54ac78b40000000000000000000000002d12d0907a388811e3aa855a550f959501d303ee
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/stableswap/factory/factory_v_100.vy
+        contract_path: /contracts/amm/stableswap/factory/factory_v_100.vy
+        contract_version: 1.0.0
+        deployment_timestamp: 1736266725
+        deployment_type: normal
+      implementation:
+        address: '0xa7b9d886A9a374A1C86DC52d2BA585c5CDFdac26'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: CODESIZE
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
+        contract_path: /contracts/amm/stableswap/implementation/implementation_v_700.vy
+        contract_version: 7.0.0
+        deployment_timestamp: 1736259845
+        deployment_type: blueprint
+      math:
+        address: '0xbC0797015fcFc47d9C1856639CaE50D0e69FbEE8'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
+        contract_path: /contracts/amm/stableswap/math/math_v_100.vy
+        contract_version: 1.0.0
+        deployment_timestamp: 1736259839
+        deployment_type: normal
+      meta_implementation:
+        address: '0x5702BDB1Ec244704E3cBBaAE11a0275aE5b07499'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: CODESIZE
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
+        contract_path: /contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
+        contract_version: 7.0.0
+        deployment_timestamp: 1736266722
+        deployment_type: blueprint
+      views:
+        address: '0xe265FC390E9129b7E337Da23cD42E00C34Da2CE3'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
+        contract_path: /contracts/amm/stableswap/views/views_v_120.vy
+        contract_version: 1.2.0
+        deployment_timestamp: 1736259842
+        deployment_type: normal
+    tricryptoswap:
+      factory:
+        address: '0x5Ea9DD3b6f042A34Df818C6c1324BC5A7c61427a'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000686bdb3d24bc6f3ed89ed3d3b659765c54ac78b4
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/tricryptoswap/factory/factory_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/factory/factory_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1736266743
+        deployment_type: normal
+      implementation:
+        address: '0x166c4084Ad2434E8F2425C64dabFE6875A0D45c5'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1736266740
+        deployment_type: blueprint
+      math:
+        address: '0x1A83348F9cCFD3Fe1A8C0adBa580Ac4e267Fe495'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/math/math_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1736266735
+        deployment_type: normal
+      views:
+        address: '0xc9Fe0C63Af9A39402e8a5514f9c43Af0322b665F'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/views/views_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1736266738
+        deployment_type: normal
+    twocryptoswap:
+      factory:
+        address: '0xd125E7a0cEddF89c6473412d85835450897be6Dc'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000686bdb3d24bc6f3ed89ed3d3b659765c54ac78b4
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/twocryptoswap/factory/factory_v_200.vy
+        contract_path: /contracts/amm/twocryptoswap/factory/factory_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1736266996
+        deployment_type: normal
+      implementation:
+        address: '0x76303e4fDcA0AbF28aB3ee42Ce086E6503431F1D'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
+        contract_path: /contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
+        contract_version: 2.1.0
+        deployment_timestamp: 1736266994
+        deployment_type: blueprint
+      math:
+        address: '0x0c59d36b23f809f8b6C7cb4c8C590a0AC103baEf'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
+        contract_path: /contracts/amm/twocryptoswap/math/math_v_210.vy
+        contract_version: 2.1.0
+        deployment_timestamp: 1736266751
+        deployment_type: normal
+      views:
+        address: '0x3d6cB2F6DcF47CDd9C13E4e3beAe9af041d8796a'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
+        contract_path: /contracts/amm/twocryptoswap/views/views_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1736266753
+        deployment_type: normal
+  gauge:
+    child_gauge:
+      factory:
+        address: '0xe61Fb97Ef6eBFBa12B36Ffd7be785c1F5A2DE66b'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000306a45a1478a000dc701a6e1f7a569afb8d9dcd600000000000000000000000096720942f9ff22efd8611f696e5333fe3671717a000000000000000000000000ac73671a1762fe835208fb93b7ae7490d1c2ccb3
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/5bb8237e41dc0776598884c95797a21b2cad9144/contracts/gauge/child_gauge/factory/factory_v_201.vy
+        contract_path: /contracts/gauge/child_gauge/factory/factory_v_201.vy
+        contract_version: 2.0.1
+        deployment_timestamp: 1736259827
+        deployment_type: normal
+      implementation:
+        address: '0xa7Ba18EeFcD9513230987eC2faB6711AF5AbD9c2'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000e61fb97ef6ebfba12b36ffd7be785c1f5a2de66b
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/792f926e32b33ea10bf3de2dd78a24975dffb07d/contracts/gauge/child_gauge/implementation/implementation_v_100.vy
+        contract_path: /contracts/gauge/child_gauge/implementation/implementation_v_100.vy
+        contract_version: 1.0.0
+        deployment_timestamp: 1736259829
+        deployment_type: normal
+  governance:
+    agent:
+      address: '0xC1b393EfEF38140662b91441C6710Aa704973228'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: null
+        optimisation_level: GAS
+      constructor_args_encoded: null
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/8c05198c971b90d3bb120de91f55485a304c7847/contracts/governance/agent/agent_v_100.vy
+      contract_path: /contracts/governance/agent/agent_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1736266987
+      deployment_type: blueprint
+    relayer:
+      op_stack:
+        address: '0xd2002373543Ce3527023C75e7518C274A51ce712'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: null
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000e0fe4416214e95f0c67dc044aaf1e63d6972e0b90000000000000000000000005eee3091f747e60a045a2e715a4c71e600e31f6e0000000000000000000000004200000000000000000000000000000000000007
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/b6b9850aba3e6964e8dfd732251024ff7d1bb7cd/contracts/governance/relayer/op_stack/relayer_v_101.vy
+        contract_path: /contracts/governance/relayer/op_stack/relayer_v_101.vy
+        contract_version: 1.0.1
+        deployment_timestamp: 1736259823
+        deployment_type: normal
+    vault:
+      address: '0x686bdb3D24Bc6F3ED89ed3d3B659765c54aC78B4'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: null
+        optimisation_level: GAS
+      constructor_args_encoded: 00000000000000000000000063eb7846642630456707c3efbb50a03c79b89d81
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/5bb8237e41dc0776598884c95797a21b2cad9144/contracts/governance/vault/vault_v_100.vy
+      contract_path: /contracts/governance/vault/vault_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1736259825
+      deployment_type: normal
+  helpers:
+    deposit_and_stake_zap:
+      address: '0x87DD13Dd25a1DBde0E1EdcF5B8Fa6cfff7eABCaD'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: null
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
+      contract_path: /contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1736267004
+      deployment_type: normal
+    rate_provider:
+      address: '0x19bd1AB34d6ABB584b9C1D5519093bfAA7f6c7d2'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: 000000000000000000000000604388bb1159afd21eb5191ce22b4decdee2ae22
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/30c8dc394ab187934f063ec545da48d5e4ac46db/contracts/helpers/rate_provider/rate_provider_v_101.vy
+      contract_path: /contracts/helpers/rate_provider/rate_provider_v_101.vy
+      contract_version: 1.0.1
+      deployment_timestamp: 1736267008
+      deployment_type: normal
+    router:
+      address: '0xd7E72f3615aa65b92A4DBdC211E296a35512988B'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: '0000000000000000000000004200000000000000000000000000000000000006'
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
+      contract_path: /contracts/helpers/router/router_v_110.vy
+      contract_version: 1.1.0
+      deployment_timestamp: 1736259837
+      deployment_type: normal
+    stable_swap_meta_zap:
+      address: '0x3E3B5F27bbf5CC967E074b70E9f4046e31663181'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: null
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/eb1dba99925e42e4f5320b8f032dbd0b24ff28d2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
+      contract_path: /contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1736267006
+      deployment_type: normal
+  registries:
+    address_provider:
+      address: '0x604388Bb1159AFd21eB5191cE22b4DeCdEE2Ae22'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: null
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/address_provider/address_provider_v_201.vy
+      contract_path: /contracts/registries/address_provider/address_provider_v_201.vy
+      contract_version: 2.0.1
+      deployment_timestamp: 1736259833
+      deployment_type: normal
+    metaregistry:
+      address: '0x06452f9c013fc37169B57Eab8F50A7A48c9198A3'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: 000000000000000000000000e61fb97ef6ebfba12b36ffd7be785c1f5a2de66bffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/metaregistry/metaregistry_v_110.vy
+      contract_path: /contracts/registries/metaregistry/metaregistry_v_110.vy
+      contract_version: 1.1.0
+      deployment_timestamp: 1736259835
+      deployment_type: normal
+      registry_handlers:
+        stableswap:
+          address: '0x6A8cbed756804B16E05E741eDaBd5cB544AE21bf'
+          compiler_settings:
+            compiler_version: 0.3.10
+            evm_version: paris
+            optimisation_level: GAS
+          constructor_args_encoded: 000000000000000000000000046207cb759f527b6c10c2d61dbaca45513685cc
+          contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
+          contract_path: /contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
+          contract_version: 1.1.0
+          deployment_timestamp: 1736267011
+          deployment_type: normal
+        tricryptoswap:
+          address: '0x1FE2a06c8bd81AE65FD1C5036451890b37976369'
+          compiler_settings:
+            compiler_version: 0.3.10
+            evm_version: paris
+            optimisation_level: GAS
+          constructor_args_encoded: 0000000000000000000000005ea9dd3b6f042a34df818c6c1324bc5a7c61427a
+          contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
+          contract_path: /contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
+          contract_version: 1.1.0
+          deployment_timestamp: 1736267013
+          deployment_type: normal
+        twocryptoswap:
+          address: '0x0458ea5F4CD00E873264Be2031Ceb8f9d9b3116c'
+          compiler_settings:
+            compiler_version: 0.3.10
+            evm_version: paris
+            optimisation_level: GAS
+          constructor_args_encoded: 000000000000000000000000d125e7a0ceddf89c6473412d85835450897be6dc
+          contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
+          contract_path: /contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
+          contract_version: 1.1.0
+          deployment_timestamp: 1736267015
+          deployment_type: normal
 pools: null
 tokens: null
